tests/pos/simpleCaseClass-2.scala
case class A(x: Int)
